--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.11.0",
+    "@nuxt/icon": "^2.2.1",
     "@nuxt/ui": "^4.3.0",
     "@pinia/nuxt": "^0.11.3",
     "better-sqlite3": "^12.6.2",
@@ -19,5 +20,8 @@
     "typescript": "^5.9.3",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.97.2"
   }
 }
